mejoro animacion index destacados y arreglo desplegue de el buscador

--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ html {
   opacity: 1;
 }
 
-.nav, .nav-2 {
+.nav {
   justify-content: center;
   align-items: center;
   display: flex;
@@ -277,8 +277,13 @@ html {
 }
 
 .nav-2 {
-  flex-direction: column;
+  align-items: center;
   padding: 15px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgb(30, 30, 30);
+  overflow: hidden;
 }
 .nav-2__form {
   height: auto;
@@ -725,7 +730,7 @@ html {
     color: rgb(73, 73, 73);
     text-decoration: none;
   }
-  .nav, .nav-2 {
+  .nav {
     display: flex;
     flex-direction: row-reverse;
     justify-content: end;
@@ -928,7 +933,7 @@ html {
   background-color: rgb(235, 235, 235);
   border-radius: 5px;
   cursor: pointer;
-  transition: 0.2s ease-in-out;
+  transition: all 400ms ease-out;
 }
 .section-1-index__article-1--figure:active {
   box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.25);
@@ -1043,6 +1048,7 @@ html {
     justify-content: center;
   }
   .section-1-index__article-1--figure:hover {
+    transform: translateY(-2%);
     box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.25);
   }
   .section-1-index__article-1--figure:hover figcaption {
