--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -63,7 +63,7 @@
             background-color: map-get($map: $colors, $key: b-dos);
             border-radius: 5px;
             cursor: pointer;
-            transition: 0.2s ease-in-out;
+            transition: all 400ms ease-out;
             &:active{
                 box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.25);
             }
@@ -178,6 +178,7 @@
                 @include wid(25%);
                 justify-content: center;
                 &:hover{
+                    transform: translateY(-2%);
                     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.25);
                     & figcaption{
                         background-size: 100% 2px;
