--- a/css/main.css
+++ b/css/main.css
@@ -677,9 +677,20 @@ html {
     font-size: 4vw;
   }
   .nav-2__ul {
-    flex-direction: column;
-    align-items: start;
+    margin: 0;
+    padding: 0;
     justify-content: start;
+    align-items: center;
+    justify-items: center;
+    flex-direction: column;
+    text-align: start;
+  }
+  .nav-2__ul--li {
+    margin: 0;
+    padding: 0;
+  }
+  .nav-2__ul--li--a {
+    justify-content: start !important;
   }
   .footer__main-text h2 {
     font-size: 9.5vw;
