--- a/views/productos/productos.html
+++ b/views/productos/productos.html
@@ -112,7 +112,7 @@
             </nav>
 <!-- NAV = END  -->
 <!-- BUSCAR = START -->
-            <nav class="nav-2 collapse navbar-collapse col-12 col-lg-4" id="navbarNav1">
+            <nav class="nav-2 collapse col-12 col-lg-4" id="navbarNav1">
                 <!-- BUSCAR-buscador = START -->
                 <form class="nav-2__form m-0">
                     <span class="nav-2__form--lupa">
@@ -305,16 +305,16 @@
         <div class="footer__form col-12 col-lg-5">
             <h3>Envianos un mensaje</h3>
             <form class="footer__form--formulario" action="#">
-                <input type="text" placeholder="Nombre y Apellido" required="required">
-                <input type="email" placeholder="Correo electronico" required="required">
-                <textarea placeholder="Escribi tu mensaje" required="required"></textarea>
-                <input type="submit" value="Enviar">
+                <input class="footer__form--formulario--input" type="text" placeholder="Nombre y Apellido" required="required">
+                <input class="footer__form--formulario--input" type="email" placeholder="Correo electronico" required="required">
+                <textarea class="footer__form--formulario--input textarea" placeholder="Escribi tu mensaje" required="required"></textarea>
+                <input class="footer__form--formulario--input submit" type="submit" value="Enviar">
             </form>
         </div>
         <!-- FOOTER-form = END -->
         <!-- FOOTER-map = START -->
         <div class="footer__map col-12 col-md-10 col-lg-10">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.01582133451!2d-58.48644812482326!3d-34.67955016150602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc95323a06215%3A0x65dff9ce16fbdcdc!2sGamma%20Distribuciones%20Tornillos!5e0!3m2!1ses-419!2sar!4v1682456787426!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.01582133451!2d-58.48644812482326!3d-34.67955016150602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc95323a06215%3A0x65dff9ce16fbdcdc!2sGamma%20Distribuciones%20Tornillos!5e0!3m2!1ses-419!2sar!4v1682456787426!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <!-- FOOTER-map = END -->
         <!-- FOOTER-redes = START -->
